--- a/package.json
+++ b/package.json
@@ -24,13 +24,14 @@
     "node": ">=4.0.0"
   },
   "dependencies": {
-    "chalk": "^2.3.0",
+    "ansi-colors": "^1.0.1",
     "lodash.clonedeep": "^4.3.2",
     "node-sass": "^4.2.0",
-    "plugin-error": "^0.1.2",
+    "plugin-error": "^1.0.1",
     "replace-ext": "^1.0.0",
-    "strip-ansi": "^4.0.0",
+    "strip-ansi": "4.0.0",
     "through2": "^2.0.0",
+    "vinyl": "^2.1.0",
     "vinyl-sourcemaps-apply": "^0.2.0"
   },
   "devDependencies": {
